# object_collection

./: README.md
object_collection_py/: CMakeLists.txt  package.xml  setup.cfg  setup.py
object_collection_py/config/: controller.yaml
object_collection_py/include/object_collection_py/: CameraControllerPlugin.hh
object_collection_py/launch/: gazebo_launch.py
object_collection_py/object_collection_py/: object_collection_node.py
object_collection_py/src/: CameraControllerPlugin.cc
object_collection_py/urdf/: box.urdf  dron_gemini.urdf.xacro  drone.urdf  model.sdf  test.urdf
